--- a/BACKPACK-SERVER/package.json
+++ b/BACKPACK-SERVER/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "npm start": "node app.js",
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
   },
